# dynamic_tracker

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  manifest.xml
k4a_image/: CMakeCache.txt  CMakeLists.txt  main.cpp
k4a_image/examples/glfw/: CMakeLists.txt
k4a_image/examples/glfw/src/: main.cpp
k4a_image/include/: CalibrationManager.h  Camera.h  GlobalRTCostFunctor.h  K4ACaptureRecipient.h  KFR2Grid.h  KFRAprilTags.h  KFRBodyTracker.h  KFRCalibration.h  KFRDisplay.h  KFRRecord.h  KinectCalibrator.h  KinectFrame.h  KinectFrameRecipient.h  KinectWrapper.h  MultiRecorder.h  PlaybackWrapper.h  apriltag_util.h  calibration.h  config.h  conversions.h  k4a_utils.h  sockets.h
k4a_image/share/kinect_util/k4aviewer/: CMakeLists.txt
k4a_image/src/: CalibrationManager.cpp  KFR2Grid.cpp  KFRAprilTags.cpp  KFRBodyTracker.cpp  KFRCalibration.cpp  KFRDisplay.cpp  KFRRecord.cpp  KinectCalibrator.cpp  KinectFrame.cpp  KinectWrapper.cpp  KinectWrapper.h  MultiRecorder.cpp  PlaybackWrapper.cpp  ak2ros.cpp  apriltag_demo.cpp  bodyTracking.cpp  bodyVisualizer.cpp  calib.cpp  calibration.cpp  capture-corners.cpp  client.cpp  conversions.cpp  kinect_to_gridmap.cpp  main.cpp  record.cpp  server.cpp  sockets.cpp  testServer.cpp  test_octomap.cpp  viewer.cpp
k4a_image/src/utils/: k4a_utils.cpp
k4a_image/test/: test_octomap.cpp
src/ekf_tracker/: ekf_tracker.cc  ekf_tracker.h  ekf_tracker_main.cc
src/jacobian/: jacobian_autodiff.h
src/tests/: ekf_tracker_tests.cc
src/visualization/: visualization.cc
